# backend/openapi/swagger.yml
@@ -85,9 +85,59 @@ paths:
           description: Conflict (The action cannot be performed in the current state)
         '500':
           description: Internal server error
+  /rooms/formulas:
+    post:
+      summary: Submit a formula for the current room
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                formula:
+                  type: string
+                  example: "1+2*3-4"
+              required:
+                - formula
+      responses:
+        '200':
+          description: Formula submission was successful.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Board'
+        '400':
+          description: Invalid request (e.g. invalid formula format)
+        '403':
+          description: Forbidden (e.g. user is not in a room)
+        '409':
+          description: Conflict (The board state has been updated by another user)
+        '500':
+          description: Internal server error
 
 components:
   schemas:
+    Board:
+      type: object
+      properties:
+        content:
+          type: array
+          items:
+            type: integer
+          minItems: 16
+          maxItems: 16
+          example: [1, 2, 3, 4, 1, 2, 3, 4, 1, 2, 3, 4, 1, 2, 3, 4]
+        version:
+          type: integer
+          description: "The new version of the board state"
+        gainScore:
+          type: integer
+          example: 10
+      required:
+        - content
+        - version
+        - gainScore
     UserCreate:
       type: object
       properties:
